# nonebot-plugin-playercheck

./: LICENSE  README.md  pyproject.toml  setup.py
assets/: assets.json
nonebot_plugin_playercheck/: __init__.py  data.json  datasource.py
nonebot_plugin_playercheck/templates/: main.html  main.html.bak1  main.html.bak2  main.html.bak3
